[Amol] : added UC2 to Update an employee payroll details

--- a/html_pages/EmployeePayrollUIhome.html
+++ b/html_pages/EmployeePayrollUIhome.html
@@ -38,7 +38,7 @@
     </div>
 
     <script src="../js/EmployeePayrollHome.js"></script>
-    <script src="../js/site_properties.js"></script>
+    <script src="../js/SiteProperties.js"></script>
     <script src="../js/utility.js"></script>
 </body>
 
