--- a/html_pages/EmployeePayrollUi.html
+++ b/html_pages/EmployeePayrollUi.html
@@ -176,7 +176,7 @@
     </div>
 
     <script src="../js/EmployeePayroll.js"></script>
-    <script src="../js/payroll_form.js"></script>
+    <script src="../js/PayrollForm.js"></script>
     <script src="../js/utility.js"></script>
 
     <script>
